--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql+asyncpg://admin:X23wd14!@localhost:5432/despesaCerta_db
-TELEGRAM_BOT_TOKEN=8535343738:AAG7dxAYKHgoaVhwxb-eEtcoi735q0XbcFY
-APP_ENV=dev
+DATABASE_URL=
+TELEGRAM_BOT_TOKEN=
+
